fix(yalb-1104): alignment fix - add object-fit fix for storybook reference card images

--- a/components/01-atoms/images/image/cl-image.scss
+++ b/components/01-atoms/images/image/cl-image.scss
@@ -7,3 +7,10 @@
 .cl-image-example {
   flex: 1 0 clamp(10rem, 40%, 20rem);
 }
+
+.sb-show-main {
+  .reference-card__image img {
+    height: 100%;
+    object-fit: cover;
+  }
+}
